Added some test data Work on layers

--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "d3": "~3.4.12",
-    "topojson": "~1.6.18"
+    "topojson": "~1.6.18",
+    "d3-plugins": "*"
   }
 }
