--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "d3": ">=3.5.5",
     "topojson": "~1.6.18",
-    "d3-plugins": "*"
+    "d3-plugins": "*",
+    "turf": "~2.0.2"
   }
 }
